--- a/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
+++ b/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:43:06 GMT
+    - Thu, 22 Jun 2017 21:29:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Z4-oK96pLEsfQtIeOakUJ2; path=/
+    - PHPSESSID=F%2CTFH8goFeK6lsegVE2Uh0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:43:06 GMT
+recorded_at: Thu, 22 Jun 2017 21:29:15 GMT
