--- a/www.nass.gov.ng/c2a8bf0f816a5cb71935c9697125bbf1871c5531.yml
+++ b/www.nass.gov.ng/c2a8bf0f816a5cb71935c9697125bbf1871c5531.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:45:53 GMT
+    - Thu, 22 Jun 2017 21:31:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vt5n2aKQAhyLbb8G9T%2C%2CP3; path=/
+    - PHPSESSID=kL%2C8b4efxBOd3H0p5R0YL2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:45:53 GMT
+recorded_at: Thu, 22 Jun 2017 21:31:28 GMT
