--- a/www.nass.gov.ng/ddf5cd8e3f3683596551d2723f5f6d47761766ad.yml
+++ b/www.nass.gov.ng/ddf5cd8e3f3683596551d2723f5f6d47761766ad.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:51:50 GMT
+    - Thu, 22 Jun 2017 21:36:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VMQCr6g182YtQkfq5r7Zp2; path=/
+    - PHPSESSID=b1s0cbxyjU5uoHYF%2C68be2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:51:50 GMT
+recorded_at: Thu, 22 Jun 2017 21:36:33 GMT
