--- a/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
+++ b/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:54:02 GMT
+    - Thu, 22 Jun 2017 21:37:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lTjZMsyRg2%2CVyr4adu0U23; path=/
+    - PHPSESSID=ydhsveTbq5Lykrv8iGh423; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:54:02 GMT
+recorded_at: Thu, 22 Jun 2017 21:37:39 GMT
