--- a/www.nass.gov.ng/0fb777aae6d6495f95d012e1a43fa9cb85220c22.yml
+++ b/www.nass.gov.ng/0fb777aae6d6495f95d012e1a43fa9cb85220c22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:55:14 GMT
+    - Thu, 22 Jun 2017 21:38:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8SUUZadIaj7OsYOTyc5PK0; path=/
+    - PHPSESSID=XxdPNpTdu%2CtOWJIrHspIK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:55:14 GMT
+recorded_at: Thu, 22 Jun 2017 21:38:40 GMT
