--- a/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
+++ b/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 03:57:16 GMT
+    - Thu, 22 Jun 2017 21:40:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=I4%2Ct8hsMIwQbfsYqkgDeb1; path=/
+    - PHPSESSID=AiFQ50QiMi6Rz23fZFuNV1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 03:57:16 GMT
+recorded_at: Thu, 22 Jun 2017 21:40:18 GMT
