--- a/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
+++ b/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:00:58 GMT
+    - Thu, 22 Jun 2017 21:45:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B4pIEIYorXJ-%2CYtmKm-WO1; path=/
+    - PHPSESSID=qTMtUMpuZIcCbOFV2Q4-K1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:00:58 GMT
+recorded_at: Thu, 22 Jun 2017 21:45:11 GMT
