--- a/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
+++ b/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:02:44 GMT
+    - Thu, 22 Jun 2017 21:46:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=F141aHIpk92kAxFOUwfSA0; path=/
+    - PHPSESSID=1%2CiD%2CteM7ykTblK0M6P370; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:02:44 GMT
+recorded_at: Thu, 22 Jun 2017 21:46:38 GMT
