--- a/www.nass.gov.ng/3a924a576f9978694651feaca9f908e3d2100ff5.yml
+++ b/www.nass.gov.ng/3a924a576f9978694651feaca9f908e3d2100ff5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:04:48 GMT
+    - Thu, 22 Jun 2017 21:49:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=R6iTCFUNJsPalDSZDCvi71; path=/
+    - PHPSESSID=md%2CJD0Tyn3L7tfEUXI5j01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:04:48 GMT
+recorded_at: Thu, 22 Jun 2017 21:49:15 GMT
