--- a/www.nass.gov.ng/58324c05d6953e9b9cffd0ce43772c4b4f3b03aa.yml
+++ b/www.nass.gov.ng/58324c05d6953e9b9cffd0ce43772c4b4f3b03aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:09:52 GMT
+    - Thu, 22 Jun 2017 21:53:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2kvq4-Hk6%2C25GbWtay4SX2; path=/
+    - PHPSESSID=AdGkCX-12lndsPrB1VSLU2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:09:52 GMT
+recorded_at: Thu, 22 Jun 2017 21:53:50 GMT
