--- a/www.nass.gov.ng/c8ee97531e15f0a410f88abc3734d9a4d860eb24.yml
+++ b/www.nass.gov.ng/c8ee97531e15f0a410f88abc3734d9a4d860eb24.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:11:42 GMT
+    - Thu, 22 Jun 2017 21:56:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=upjkkr1vuEW-43r06aixA0; path=/
+    - PHPSESSID=ii%2CZQMQ21xQCa2sho-mpJ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:11:42 GMT
+recorded_at: Thu, 22 Jun 2017 21:56:06 GMT
