--- a/www.nass.gov.ng/b7baa2f9c92f241abb1abf301a0f2b371166db7d.yml
+++ b/www.nass.gov.ng/b7baa2f9c92f241abb1abf301a0f2b371166db7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:12:22 GMT
+    - Thu, 22 Jun 2017 21:56:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ifPOkA0AyGyh9JXJqgL2l0; path=/
+    - PHPSESSID=o5tF%2CHdgNdg-cmmu7V0wd0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:12:22 GMT
+recorded_at: Thu, 22 Jun 2017 21:56:55 GMT
