--- a/www.nass.gov.ng/9de9b50a4d49ca996200d3c6a75c2c0d96731d99.yml
+++ b/www.nass.gov.ng/9de9b50a4d49ca996200d3c6a75c2c0d96731d99.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:13:29 GMT
+    - Thu, 22 Jun 2017 21:58:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pNjEJpqo6hxN1l96l%2CXKw3; path=/
+    - PHPSESSID=GcBD46kD9ewy1g2SW5IEM0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:13:29 GMT
+recorded_at: Thu, 22 Jun 2017 21:58:11 GMT
