--- a/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
+++ b/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:15:21 GMT
+    - Thu, 22 Jun 2017 21:59:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eLhuRjX-mlxkcH%2C%2CKVJo12; path=/
+    - PHPSESSID=rnxFP0CR0XKRJ-T0Ti-nG3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:15:21 GMT
+recorded_at: Thu, 22 Jun 2017 21:59:42 GMT
