--- a/www.nass.gov.ng/c14377e7be6646d45d849e8ba9166b3813d1c555.yml
+++ b/www.nass.gov.ng/c14377e7be6646d45d849e8ba9166b3813d1c555.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:26:13 GMT
+    - Thu, 22 Jun 2017 22:10:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-n5jYXiA%2Co%2CIKoizXd1JK0; path=/
+    - PHPSESSID=uQpT6NOu-NWJw-1XS74Zl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:26:14 GMT
+recorded_at: Thu, 22 Jun 2017 22:10:20 GMT
