--- a/www.nass.gov.ng/1306e95b56608c7d6d929e981b2412a55320b561.yml
+++ b/www.nass.gov.ng/1306e95b56608c7d6d929e981b2412a55320b561.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:30:32 GMT
+    - Thu, 22 Jun 2017 22:16:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZsCqZb3FDh0X9ef40ndSr3; path=/
+    - PHPSESSID=f90Yswxu74Tw4g6sy%2Csxu2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:30:32 GMT
+recorded_at: Thu, 22 Jun 2017 22:16:00 GMT
