--- a/www.nass.gov.ng/f0a31908cfe3a5053d060b5497f08f44933eb2c6.yml
+++ b/www.nass.gov.ng/f0a31908cfe3a5053d060b5497f08f44933eb2c6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:32:08 GMT
+    - Thu, 22 Jun 2017 22:16:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HUIRlEWvnqQafx6PEC0hV1; path=/
+    - PHPSESSID=%2C23OQ5oXZGdBNqWrCsMC82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:32:08 GMT
+recorded_at: Thu, 22 Jun 2017 22:16:43 GMT
