--- a/www.nass.gov.ng/61531b370eb907ab683349aaaca322188d3f87b1.yml
+++ b/www.nass.gov.ng/61531b370eb907ab683349aaaca322188d3f87b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:37:46 GMT
+    - Thu, 22 Jun 2017 22:23:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=V2xyPzIlSXv55DddleEQB1; path=/
+    - PHPSESSID=aQusdqJ5E7TDYq2dHoa%2Cw0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:37:46 GMT
+recorded_at: Thu, 22 Jun 2017 22:23:12 GMT
