--- a/www.nass.gov.ng/9f85666ebb698e2a1171654d13b8cf0faf5b435e.yml
+++ b/www.nass.gov.ng/9f85666ebb698e2a1171654d13b8cf0faf5b435e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:38:32 GMT
+    - Thu, 22 Jun 2017 22:24:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-U01fLnPdxnWVjCtNZ1OQ1; path=/
+    - PHPSESSID=BnZHQA6GU%2CgtIpTdFD2-N1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:38:32 GMT
+recorded_at: Thu, 22 Jun 2017 22:24:01 GMT
