--- a/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
+++ b/www.nass.gov.ng/f4fd1df228cf6325ce20a78e624c01a0e461c647.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:46:46 GMT
+    - Thu, 22 Jun 2017 22:30:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1%2C9tz2j2LmWttCvG82HOt0; path=/
+    - PHPSESSID=4sCKqqdnHaHBNM9UniHYk1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:46:46 GMT
+recorded_at: Thu, 22 Jun 2017 22:30:44 GMT
