--- a/www.nass.gov.ng/1fbfad4aabf2a147283758ff8eeaafbd779daf1d.yml
+++ b/www.nass.gov.ng/1fbfad4aabf2a147283758ff8eeaafbd779daf1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:52:57 GMT
+    - Thu, 22 Jun 2017 22:37:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DazXAvO2Uj2ir%2CaPbAKfX2; path=/
+    - PHPSESSID=4GJKwFlvuz3hMh6dvaqOQ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:52:57 GMT
+recorded_at: Thu, 22 Jun 2017 22:37:44 GMT
