--- a/www.nass.gov.ng/2619f9d85c914747086ac915b3ed31dbebef4ca0.yml
+++ b/www.nass.gov.ng/2619f9d85c914747086ac915b3ed31dbebef4ca0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:54:29 GMT
+    - Thu, 22 Jun 2017 22:38:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OkvXJi6EhdW16S7DsHOpj2; path=/
+    - PHPSESSID=HKNX0aFYRcDS%2CBRVMyQ091; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:54:29 GMT
+recorded_at: Thu, 22 Jun 2017 22:38:38 GMT
