--- a/www.nass.gov.ng/b484040f770aa7afbb6d85e76a0de21094326de8.yml
+++ b/www.nass.gov.ng/b484040f770aa7afbb6d85e76a0de21094326de8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:56:15 GMT
+    - Thu, 22 Jun 2017 22:39:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QSahDhemZVuQZhT7BZOcg1; path=/
+    - PHPSESSID=2HC249%2CheW0rXvbWsw8vy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:56:15 GMT
+recorded_at: Thu, 22 Jun 2017 22:39:40 GMT
