--- a/www.nass.gov.ng/ebe5471cbb72fc790bb3143e22d1db6fac04c0fd.yml
+++ b/www.nass.gov.ng/ebe5471cbb72fc790bb3143e22d1db6fac04c0fd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:59:32 GMT
+    - Thu, 22 Jun 2017 22:43:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Cl1Az9KY-MK1oFIDJuY%2CT2; path=/
+    - PHPSESSID=2aLRg0NdzOgMC1qLBAeRL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:59:32 GMT
+recorded_at: Thu, 22 Jun 2017 22:43:12 GMT
