--- a/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
+++ b/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 04:59:55 GMT
+    - Thu, 22 Jun 2017 22:43:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PpjmPW%2CQuI6GXzmEFV9Nv3; path=/
+    - PHPSESSID=bghmJubMpVghYD6qM3Hju2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 04:59:56 GMT
+recorded_at: Thu, 22 Jun 2017 22:43:30 GMT
