--- a/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
+++ b/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:01:13 GMT
+    - Thu, 22 Jun 2017 22:44:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E%2CurK2e-QDrYfrI0-9EMl0; path=/
+    - PHPSESSID=4JpdrS1R3eM4ay6dAEdpy3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:01:13 GMT
+recorded_at: Thu, 22 Jun 2017 22:44:52 GMT
