--- a/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
+++ b/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:04:36 GMT
+    - Thu, 22 Jun 2017 22:48:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0Hy6PsaoX5wvPPG%2CfgP8g3; path=/
+    - PHPSESSID=ZG2CMhQ%2C5v6-cdXXEzXYj3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:04:36 GMT
+recorded_at: Thu, 22 Jun 2017 22:48:40 GMT
