--- a/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
+++ b/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:07:14 GMT
+    - Thu, 22 Jun 2017 22:50:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CH2ZUyt4F1vC57CVpdASI2; path=/
+    - PHPSESSID=P%2CDVViQm-KkCrxXyhQtGH0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:07:14 GMT
+recorded_at: Thu, 22 Jun 2017 22:50:25 GMT
