--- a/www.nass.gov.ng/c0cf0551b470d3720a59c389ad33898ac6e75aff.yml
+++ b/www.nass.gov.ng/c0cf0551b470d3720a59c389ad33898ac6e75aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:17:42 GMT
+    - Thu, 22 Jun 2017 22:58:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g6rkXhXjXDdrvE5HPrJAU3; path=/
+    - PHPSESSID=8j4%2C7xxMFOcnwA15pZtoY3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:17:42 GMT
+recorded_at: Thu, 22 Jun 2017 22:58:55 GMT
