--- a/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
+++ b/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:20:05 GMT
+    - Thu, 22 Jun 2017 23:00:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eTbJaSC6FJ9JIEj8wm3mo0; path=/
+    - PHPSESSID=Y%2CPkejoXV-JVEUDRkh%2C6N3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:20:05 GMT
+recorded_at: Thu, 22 Jun 2017 23:00:53 GMT
