--- a/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
+++ b/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:20:48 GMT
+    - Thu, 22 Jun 2017 23:01:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=npgSz4w4xC18ad5cxfWM%2C2; path=/
+    - PHPSESSID=Imyg%2CsoyBDZniL9wMAvbP1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:20:48 GMT
+recorded_at: Thu, 22 Jun 2017 23:01:38 GMT
