--- a/www.nass.gov.ng/3bf71f6175f2f1abae7a29d4c23003808b7a2842.yml
+++ b/www.nass.gov.ng/3bf71f6175f2f1abae7a29d4c23003808b7a2842.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:22:50 GMT
+    - Thu, 22 Jun 2017 23:03:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mLFelq4MHOchPpSQc%2CkLO2; path=/
+    - PHPSESSID=SlJu0lauXUXg-IW-bYmG12; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:22:50 GMT
+recorded_at: Thu, 22 Jun 2017 23:03:43 GMT
