--- a/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
+++ b/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:27:44 GMT
+    - Thu, 22 Jun 2017 23:09:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5yAmFdwAoPq%2CBUdJQexBF2; path=/
+    - PHPSESSID=gMWzgRBVBR7tbSMUT6T1v0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:27:44 GMT
+recorded_at: Thu, 22 Jun 2017 23:09:51 GMT
