--- a/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
+++ b/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:29:37 GMT
+    - Thu, 22 Jun 2017 23:12:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qvGx%2CS6VQl-zIzjVFu6zO2; path=/
+    - PHPSESSID=ue9tqOka0IIkzKeVngsXg1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:29:38 GMT
+recorded_at: Thu, 22 Jun 2017 23:12:18 GMT
