--- a/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
+++ b/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:30:43 GMT
+    - Thu, 22 Jun 2017 23:13:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DdiqzDvCoGnYg8r9SAkdn1; path=/
+    - PHPSESSID=qWZnTzRloYCy%2CHwUolZAk0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:30:43 GMT
+recorded_at: Thu, 22 Jun 2017 23:13:48 GMT
