--- a/www.nass.gov.ng/a1368c3730ef28b18d11bd6f3f699992afd93a45.yml
+++ b/www.nass.gov.ng/a1368c3730ef28b18d11bd6f3f699992afd93a45.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:32:57 GMT
+    - Thu, 22 Jun 2017 23:16:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KvGfuHg8fXj4wVP8bnokG2; path=/
+    - PHPSESSID=3argLD79sl%2CxviEmsZzDf0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:32:57 GMT
+recorded_at: Thu, 22 Jun 2017 23:16:54 GMT
