--- a/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
+++ b/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Jun 2017 05:36:48 GMT
+    - Thu, 22 Jun 2017 23:21:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UwlVP4m69uRdNM3u7zUh02; path=/
+    - PHPSESSID=fcnm%2ChftjI6YdVrJ1tXUw0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Jun 2017 05:36:48 GMT
+recorded_at: Thu, 22 Jun 2017 23:21:26 GMT
